# FFmpegLearn

app/: CMakeLists.txt  build.gradle  笔记.txt
app/src/androidTest/java/com/luckyboy/ffmpeglearn/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: LKConstDefine.h  LKFFmpeg.cpp  LKFFmpeg.h  LKJNICall.cpp  LKJNICall.h  media-player.cpp
app/src/main/java/com/luckyboy/ffmpeglearn/: FFmpegPlayer.java  MainActivity.java
app/src/main/java/com/luckyboy/ffmpeglearn/listener/: MediaErrorListener.java
app/src/main/res/xml/: file_paths.xml
app/src/test/java/com/luckyboy/ffmpeglearn/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
